--- a/BOOKSHELF/BOOKSHELF/BOOKSHELF.vcxproj
+++ b/BOOKSHELF/BOOKSHELF/BOOKSHELF.vcxproj
@@ -149,6 +149,12 @@
   <ItemGroup>
     <ClCompile Include="BOOKSHELF.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\book.h" />
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\BookShelf.h" />
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\PrintBook.h" />
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\Shelf.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
