--- a/BOOKSHELF/BOOKSHELF/BOOKSHELF.vcxproj.filters
+++ b/BOOKSHELF/BOOKSHELF/BOOKSHELF.vcxproj.filters
@@ -19,4 +19,18 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\BookShelf.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\book.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\Shelf.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\ConsoleApplication1\ConsoleApplication1\PrintBook.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
